--- a/lesson_15/css/style.css
+++ b/lesson_15/css/style.css
@@ -115,6 +115,7 @@ body {
 }
 .button {
     display: inline-flex;
+    min-height: 50px;
     padding: 12px 48px;
     justify-content: center;
     align-items: center;
