--- a/lesson_16/css/fonts.css
+++ b/lesson_16/css/fonts.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css?family=Poppins:700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Inter:regular,500,600&display=swap");
 /* Підключення вручну */
 @font-face {
     font-family: "Causten";
