--- a/lesson_16/css/style.css
+++ b/lesson_16/css/style.css
@@ -107,6 +107,17 @@ body {
     resize: vertical;
     padding-top: 15px;
     line-height: 140%;
+    position: relative;
+}
+.form-white__message:before {
+    content: "Message...";
+    position: absolute;
+    width: 100px;
+    height: 50px;
+    top: 15px;
+    left: 15px;
+    background-color: #525eca;
+    color: red;
 }
 .form-white__btn {
     padding: 21px 61px;
@@ -120,7 +131,6 @@ body {
 }
 .form-white__btn:hover {
     background-color: #525eca;
-    
 }
 .form-white__btn:active::before {
     content: "";
@@ -140,4 +150,61 @@ body {
 .form-white__btn:active:active {
     transform: translateY(5px);
     box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.2);
+}
+.form-white__personal-data {
+    position: relative;
+}
+/* .form-white__personal-data:before {
+    content: "Your Name";
+    position: absolute;
+    width: 100%;
+    height: 15px;
+    top: 50%;
+    left: 15px;
+    transform: translateY(-50%);
+    font-size: 22px;
+} */
+.form-white__wraper {
+    display: flex;
+    width: 100%;
+    gap: 35px;
+}
+/* .form-white__personal-data {
+    position: relative;
+}
+
+.form-white__label {
+    position: absolute;
+    left: 15px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 22px;
+    transition: transform 0.3s, font-size 0.3s;
+}
+
+.form-white__name:focus ~ .form-white__label--name {
+    transform: translateY(-80%) scale(0.8);
+    font-size: 16px;
+} */
+
+.form-white__personal-data {
+    position: relative;
+}
+
+.form-white__label {
+    position: absolute;
+    left: 15px;
+    top: 50%;
+    transform: translateY(-50%);
+    font-size: 22px;
+    transition: transform 0.3s, font-size 0.3s;
+}
+
+.form-white__name:focus + .form-white__label,
+.form-white__email:focus + .form-white__label,
+.form-white__phone:focus + .form-white__label,
+.form-white__subject:focus + .form-white__label {
+    transform: translateY(-50%) scale(0.8);
+    font-size: 16px;
+    top: 20%;
 }
