--- a/lesson_16/css/style.css
+++ b/lesson_16/css/style.css
@@ -26,17 +26,17 @@ body {
     height: 200px;
 }
 /* ========================================== */
-.white-collar {
+.call-back {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 50px;
     /* max-width: 1220px; */
 }
-.white-collar:not(:last-child) {
+.call-back:not(:last-child) {
     margin-bottom: 100px;
 }
-.white-collar__label {
+.call-back__label {
     position: relative;
     color: #37393f;
     font-family: "Inter";
@@ -44,10 +44,10 @@ body {
     font-weight: 500;
     padding-left: 18px;
 }
-.white-collar__label:not(:last-child) {
+.call-back__label:not(:last-child) {
     margin-bottom: 16px;
 }
-.white-collar__label::before {
+.call-back__label::before {
     content: "";
     position: absolute;
     top: 50%;
@@ -57,7 +57,7 @@ body {
     background: #40ddb6;
     transform: translateY(-50%);
 }
-.white-collar__title {
+.call-back__title {
     color: #37393f;
     text-align: center;
     font-family: "Poppins";
@@ -65,51 +65,51 @@ body {
     font-weight: 700;
     line-height: 121%; /* 48.4px */
 }
-.white-collar__title:not(:last-child) {
+.call-back__title:not(:last-child) {
     margin-bottom: 40px;
 }
-.white-collar__form {
+.call-back__form {
     padding: 20px;
     box-sizing: border-box;
 }
-.form-white {
+.back-call {
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
-.form-white__info,
-.form-white__personal-data {
+.back-call__info,
+.back-call__personal-data {
     height: 65px;
 }
-.form-white__info,
-.form-white__personal-data,
-.form-white__wraper-message {
+.back-call__info,
+.back-call__personal-data,
+.back-call__wraper-message {
     width: 100%;
     display: flex;
     gap: 35px;
     margin-bottom: 28px;
 }
-.form-white__input,
-.form-white__message {
+.back-call__input,
+.back-call__message {
     width: 100%;
     border: 1px solid #ddd;
     background: #f8f8f8;
     font-size: 22px;
     padding: 0 45px;
 }
-.form-white__wraper-message {
+.back-call__wraper-message {
     position: relative;
     margin-bottom: 50px;
 }
-.form-white__message {
+.back-call__message {
     position: relative;
     min-height: 222px;
     resize: vertical;
     padding-top: 20px;
     line-height: 140%;
 }
-.form-white__btn {
+.back-call__btn {
     padding: 21px 61px;
     position: relative;
     background-color: #6b77e5;
@@ -120,10 +120,10 @@ body {
     font-weight: 600;
     text-transform: capitalize;
 }
-.form-white__btn:hover {
+.back-call__btn:hover {
     background-color: #525eca;
 }
-.form-white__btn:active::before {
+.back-call__btn:active::before {
     content: "";
     position: absolute;
     top: 2px;
@@ -135,22 +135,22 @@ body {
     z-index: -1;
     transition: opacity 0.3s;
 }
-.form-white__btn:active:hover::before {
+.back-call__btn:active:hover::before {
     opacity: 0.5;
 }
-.form-white__btn:active:active {
+.back-call__btn:active:active {
     transform: translateY(5px);
     box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.2);
 }
-.form-white__personal-data {
+.back-call__personal-data {
     position: relative;
 }
-.form-white__wraper {
+.back-call__wraper {
     display: flex;
     width: 100%;
     gap: 35px;
 }
-.form-white__label {
+.back-call__label {
     position: absolute;
     left: 40px;
     top: 50%;
@@ -158,7 +158,7 @@ body {
     font-size: 22px;
     transition: transform 0.3s, font-size 0.3s, top 0.3s;
 }
-.form-white__label--message {
+.back-call__label--message {
     top: 22px;
 }
 /* =========================== */
@@ -174,7 +174,7 @@ body {
 .check-out:not(:last-child) {
     margin-bottom: 100px;
 }
-.check-out__title {
+.title {
     color: #3c4242;
     font-size: 28px;
     font-weight: 600;
@@ -183,7 +183,7 @@ body {
     position: relative;
     padding-left: 15px;
 }
-.check-out__title:not(:last-child) {
+.title:not(:last-child) {
     margin-bottom: 20px;
 }
 .check-out__title::before {
@@ -196,14 +196,14 @@ body {
     top: 0;
     left: 0;
 }
-.check-out__label {
+.label--title {
     color: #3c4242;
     font-size: 22px;
     font-weight: 600;
     line-height: 33.5px; /* 152.273% */
     letter-spacing: 0.44px;
 }
-.check-out__label:not(:last-child) {
+.label--title:not(:last-child) {
     margin-bottom: 50px;
 }
 .check-out__form {
@@ -244,28 +244,22 @@ body {
     background: #f6f6f6;
     position: relative;
 }
-/* .private__input--state::after {
-    content: "\25BC";
-    position: absolute;
-    top: 50%;
-    right: 20px;
-    transform: translateY(-50%);
-    font-size: 14px; 
-    color: #000;
-} */
 .private__input--phone {
     max-width: 382px;
 }
-.button--purple {
+.button--purple,
+.button--cancel {
     color: #fff;
     text-align: center;
     font-size: 18px;
     font-weight: 500;
     border-radius: 8px;
-    background: #8a33fd;
     padding: 16px 20px;
     position: relative;
-    transition: box-shadow 0.3s;
+    transition: box-shadow 0.3s, background-color 0.3s;
+}
+.button--purple {
+    background: #8a33fd;
 }
 .button--purple:not(:last-child) {
     margin-bottom: 20px;
@@ -274,7 +268,12 @@ body {
     background: #7124d5;
     box-shadow: 0 0.5em 0.5em -0.4em #7124d5;
 }
-.button--purple:active {
+.button--cancel:hover {
+    background: #d7d5d5;
+    box-shadow: 0 0.5em 0.5em -0.4em #d7d5d5;
+}
+.button--purple:active,
+.button--cancel:active {
     transform: translateY(4px);
     box-shadow: none;
 }
@@ -297,7 +296,8 @@ body {
     max-width: 803px;
     margin: 0 auto;
 }
-.shipping__wraper {
+.shipping:not(:last-child) {
+    margin-bottom: 100px;
 }
 .form-shipping__wraper:not(:last-child) {
     padding-bottom: 30px;
@@ -439,5 +439,64 @@ body {
 }
 .form-shipping__btn {
     padding: 16px 20px;
+}
+/* ===================== */
+.info {
+    max-width: 803px;
+    margin: 0 auto;
+}
+.form-info__row {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+}
+.form-info__row:not(:last-child) {
+    margin-bottom: 28px;
+}
+.form-info__row.form-info__row--phone {
+    margin-bottom: 43px;
+}
+.form-info__private {
+    display: flex;
+    flex-direction: column;
+}
+.form-info__label {
+    color: #3c4242;
+    font-size: 18px;
+    font-weight: 600;
+    letter-spacing: 0.36px;
+    margin-bottom: 10px;
+}
+.form-info__block:not(:last-child) {
+    margin-bottom: 30px;
+}
+.form-info__message {
+    width: 100%;
+    min-height: 150px;
+    border-radius: 8px;
+    background: #f6f6f6;
+    padding: 18px 22px;
+    font-size: 16px;
+    resize: vertical;
+    margin-top: 10px;
+}
+.form-info__checkbox:not(:last-child) {
+    margin-bottom: 15px;
+}
+.form-info__btn {
+    padding: 12px 40px;
+}
+.form-info__btn:not(:last-child) {
+    margin-right: 30px;
+}
+.form-info__wrap-check {
+    margin-bottom: 60px;
+}
+.button--cancel {
+background: #F6F6F6;
+color: #807D7E;
 
+text-align: center;
+font-size: 20px;
+font-weight: 700;
 }
